adding info on algorithms

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -9,6 +9,7 @@
 	<h3>JavaScript. Focus on conceptual understanding.</h3>
 
 	<h1>Algorithms</h1>
+	<h2>http://blog.benoitvallon.com/sorting-algorithms-in-javascript/the-merge-sort-algorithm/</h2>
 		<ul style="list-style-type:circle;">
 		  <li>Bottom-up approach</li>
 		  <li>Top-down approach</li>
@@ -20,19 +21,27 @@
 		  <li>Recursion</li>
 		  <li>Algorithms linked to a specific data structure:</li>
 		  <li>Big-O notation/Run-Time: 
-				1. https://www.youtube.com/watch?v=v4cd1O4zkGw
+				1. <iframe width="560" height="315" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				2. http://bigocheatsheet.com/</li>
 		  <li>Discuss complex algorithms like:
-				1. Dijkstra - https://www.youtube.com/watch?v=GazC3A4OQTE
-				2. A* (A Star) - https://www.youtube.com/watch?v=ySN5Wnu88nE</li>
+				1. Dijkstra - <iframe width="560" height="315" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				2. A* (A Star) - <iframe width="560" height="315" src="https://www.youtube.com/embed/ySN5Wnu88nE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		</ul>  
 
 <h1>Sorting</h1>
-	insertion-sort; https://www.youtube.com/watch?v=JU767SDMDvA
-	radix-sort:
-	QuickSort:https://www.youtube.com/watch?v=SLauY6PpjW4
-	MergeSort:
-	HeapSort:
+<h2>https://github.com/benoitvallon/computer-science-in-javascript/tree/master/sorting-algorithms-in-javascript</h2>
+			<ul>
+				<li>insertion-sort <iframe width="560" height="315" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+				<li>radix-sort</li>
+				<li>QuickSort <iframe width="560" height="315" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>MergeSort</li>
+				<li>HeapSort</li>
+			</ul>
+
+	
+	
+	
+	
 
 Data structures-
 		Arrays:
