--- a/KeySequence/KeySeq.html
+++ b/KeySequence/KeySeq.html
@@ -11,10 +11,14 @@
 	const secretCode = 'katherine';
 
 	window.addEventListener('keyup', (e) => {
-		console.log(e.key);
-		pressed.punch(e.key);
-		pressed.splice()
-		console.log(pressed);
+	  console.log(e.key);
+	  pressed.push(e.key);
+	  pressed.splice(-secretCode.length - 1, pressed.length - secretCode.length);
+	  if (pressed.join('').includes(secretCode)) {
+	    console.log('DING DING!');
+	    cornify_add();
+	  }
+	  console.log(pressed);
 	});
 
 </script>
