--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -21,7 +21,7 @@
 		  <li>Recursion</li>
 		  <li>Algorithms linked to a specific data structure:</li>
 		  <li>Big-O notation/Run-Time: 
-				1. <iframe width="560" height="315" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				2. http://bigocheatsheet.com/</li>
 		  <li>Discuss complex algorithms like:
 				1. Dijkstra - <iframe width="560" height="315" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -34,7 +34,7 @@
 				<li>insertion-sort <iframe width="560" height="315" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
 				<li>radix-sort</li>
 				<li>QuickSort <iframe width="560" height="315" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-				<li>MergeSort</li>
+				<li>MergeSort <iframe width="560" height="315" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>HeapSort</li>
 			</ul>
 
