--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -35,7 +35,7 @@
 				<li>radix-sort</li>
 				<li>QuickSort <iframe width="560" height="315" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>MergeSort <iframe width="560" height="315" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-				<li>HeapSort</li>
+				<li>HeapSort <iframe width="560" height="315" src="https://www.youtube.com/embed/2DmK_H7IdTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 			</ul>
 
 	
