--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -21,30 +21,30 @@
 		  <li>Recursion</li>
 		  <li>Algorithms linked to a specific data structure:</li>
 		  <li>Big-O notation/Run-Time: 
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="300" height="160" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				2. http://bigocheatsheet.com/</li>
 		  <li>Discuss complex algorithms like:
-				1. Dijkstra - <iframe width="560" height="315" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				2. A* (A Star) - <iframe width="560" height="315" src="https://www.youtube.com/embed/ySN5Wnu88nE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				1. Dijkstra - <iframe width="300" height="160" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				2. A* (A Star) - <iframe width="300" height="160" src="https://www.youtube.com/embed/ySN5Wnu88nE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		</ul>  
 
 <h1>Sorting</h1>
 <h2>https://github.com/benoitvallon/computer-science-in-javascript/tree/master/sorting-algorithms-in-javascript</h2>
 			<ul>
-				<li>insertion-sort <iframe width="560" height="315" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
+				<li>Insertion-Sort</li>
+				<li><iframe width="300" height="169" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
 				<li>radix-sort</li>
-				<li>QuickSort <iframe width="560" height="315" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-				<li>MergeSort <iframe width="560" height="315" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-				<li>HeapSort <iframe width="560" height="315" src="https://www.youtube.com/embed/2DmK_H7IdTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/2109VzXVTus" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>QuickSort</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>MergeSort</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>HeapSort</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/2DmK_H7IdTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 			</ul>
 
-	
-	
-	
-	
-
-Data structures-
-		Arrays:
+<h1>Data structures</h1>
+<h2>Arrays:</h2>
 			var fruits = ['Apple', 'Banana', 'Mango'];
 			var numbers = [1, 2, 3, 4];
 			var vegetables = ['Cabbage', 'Turnip', 'Radish', 'Carrot'];
