--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -20,12 +20,14 @@
 		  <li>Greediness</li>
 		  <li>Recursion</li>
 		  <li>Algorithms linked to a specific data structure:</li>
-		  <li>Big-O notation/Run-Time: 
-				<iframe width="300" height="160" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				2. http://bigocheatsheet.com/</li>
-		  <li>Discuss complex algorithms like:
-				1. Dijkstra - <iframe width="300" height="160" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				2. A* (A Star) - <iframe width="300" height="160" src="https://www.youtube.com/embed/ySN5Wnu88nE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+		  <li>Big-O notation/Run-Time</li>
+			<li><iframe width="300" height="160" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+			<li>http://bigocheatsheet.com/</li>
+		  <li>Discuss complex algorithms</li>
+			<li>Dijkstra</li>
+			<li><iframe width="300" height="160" src="https://www.youtube.com/embed/GazC3A4OQTE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+			<li>A* (A Star)</li>
+			<li><iframe width="300" height="160" src="https://www.youtube.com/embed/ySN5Wnu88nE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		</ul>  
 
 <h1>Sorting</h1>
