--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>A Study Guide</title>
+	  <link rel="stylesheet" href="AStudyGuide.css">
 </head>
 <body>
 
@@ -31,7 +32,7 @@
 		</ul>  
 
 <h1>Sorting</h1>
-<h2>https://github.com/benoitvallon/computer-science-in-javascript/tree/master/sorting-algorithms-in-javascript</h2>
+<!-- <h2>https://github.com/benoitvallon/computer-science-in-javascript/tree/master/sorting-algorithms-in-javascript</h2>
 			<ul>
 				<li>Insertion-Sort</li>
 				<li><iframe width="300" height="169" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></li>
@@ -43,7 +44,15 @@
 				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>HeapSort</li>
 				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/2DmK_H7IdTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
-			</ul>
+			</ul> -->
+
+			<div class="sorting">
+			  <div class="one"><iframe width="300" height="169" src="https://www.youtube.com/embed/JU767SDMDvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe></div>
+			  <div class="two"><iframe width="300" height="160" src="https://www.youtube.com/embed/2109VzXVTus" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+			  <div class="three"><iframe width="300" height="160" src="https://www.youtube.com/embed/SLauY6PpjW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+			  <div class="four"><iframe width="300" height="160" src="https://www.youtube.com/embed/4VqmGXwpLqc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+			  <div class="five"><iframe width="300" height="160" src="https://www.youtube.com/embed/2DmK_H7IdTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+			</div>
 
 <h1>Data structures</h1>
 <h2>Arrays:</h2>
