--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -56,12 +56,13 @@
 
 <h1>Data structures</h1>
 <h2>Arrays:</h2>
-			var fruits = ['Apple', 'Banana', 'Mango'];
-			var numbers = [1, 2, 3, 4];
-			var vegetables = ['Cabbage', 'Turnip', 'Radish', 'Carrot'];
-			var elements = ['this is the first element', 'this is the second element', 'this is the last element'];
-			var years = [1950, 1960, 1970, 1980, 1990, 2000, 2010];
-			var board = [ 
+			<ul>
+				<li>var fruits = ['Apple', 'Banana', 'Mango'];</li>
+				<li>var numbers = [1, 2, 3, 4];</li>
+				<li>var vegetables = ['Cabbage', 'Turnip', 'Radish', 'Carrot'];</li>
+				<li>var elements = ['this is the first element', 'this is the second element', 'this is the last element'];</li>
+				<li>var years = [1950, 1960, 1970, 1980, 1990, 2000, 2010];</li>
+				<li>var board = [ 
 				  ['R','N','B','Q','K','B','N','R'],
 				  ['P','P','P','P','P','P','P','P'],
 				  [' ',' ',' ',' ',' ',' ',' ',' '],
@@ -69,18 +70,20 @@
 				  [' ',' ',' ',' ',' ',' ',' ',' '],
 				  [' ',' ',' ',' ',' ',' ',' ',' '],
 				  ['p','p','p','p','p','p','p','p'],
-				  ['r','n','b','q','k','b','n','r'] ];
-		Linked Lists:
-		Stacks:
-		Queues:
-		Hash-sets: var hashset = new HashSet(1, '1', [1]);
-		Hash-maps:
-		Hash-Tables:
-		Dictionary:
-		Trees:
-		Binary Trees:
-		Heaps:
-		Graphs:
+				  ['r','n','b','q','k','b','n','r'] ];</li>
+				<li>Linked Lists</li>
+				<li><iframe width="560" height="315" src="https://www.youtube.com/embed/njTh_OwMljA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li>Stacks</li>
+				<li>Queues</li>
+				<li>Hash-sets: var hashset = new HashSet(1, '1', [1]);</li>
+				<li>Hash-maps</li>
+				<li>Hash-Tables</li>
+				<li>Dictionary</li>
+				<li>Trees</li>
+				<li>Binary Trees</li>
+				<li>Heaps</li>
+				<li>Graphs</li>
+		</ul>
 	What algorithms tend to work with each data structure?
 
 Mathematics-
