changing size of you tube videos on data structures

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -72,12 +72,17 @@
 				  ['p','p','p','p','p','p','p','p'],
 				  ['r','n','b','q','k','b','n','r'] ];</li>
 				<li>Linked Lists</li>
-				<li><iframe width="560" height="315" src="https://www.youtube.com/embed/njTh_OwMljA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/njTh_OwMljA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Stacks</li>
-				<li>Queues</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/wjI1WNcIntg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/wjI1WNcIntg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Hash-sets: var hashset = new HashSet(1, '1', [1]);</li>
+				<li>const set1 = new Set([1, 2, 3, 4, 5]);</li>
+				<li>console.log(set1.has(1));</li>
+				<li>// expected output: true</li>
 				<li>Hash-maps</li>
 				<li>Hash-Tables</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/shs0KM3wKv8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Dictionary</li>
 				<li>Trees</li>
 				<li>Binary Trees</li>
