--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -84,6 +84,7 @@
 				<li>Hash-Tables</li>
 				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/shs0KM3wKv8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Dictionary</li>
+				<li><iframe width="560" height="315" src="https://www.youtube.com/embed/3YtxMsAjyoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Trees</li>
 				<li>Binary Trees</li>
 				<li>Heaps</li>
