adding binary search tree in javascript

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -84,9 +84,11 @@
 				<li>Hash-Tables</li>
 				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/shs0KM3wKv8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Dictionary</li>
-				<li><iframe width="560" height="315" src="https://www.youtube.com/embed/3YtxMsAjyoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/3YtxMsAjyoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Trees</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/oSWTXtMglKE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Binary Trees</li>
+				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/5cU1ILGy6dM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 				<li>Heaps</li>
 				<li>Graphs</li>
 		</ul>
