formatting areas of outline

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -95,31 +95,68 @@
 				<li><iframe width="300" height="160" src="https://www.youtube.com/embed/c8P9kB1eun4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		</ul>
 
-	What algorithms tend to work with each data structure?
+What algorithms tend to work with each data structure?
 
-Mathematics-
-	Basic discrete Math Questions:
-	Counting Problems:
-	Probability Problems:
-	Discrete Math 101:
-	n-Choose-k problems: 
-	ilk:
+<h2>Mathematics</h2>
+	<ol>
+		<li>Basic discrete Math Questions</li>
+		<li>Counting Problems</li>
+		<li>Probability Problems</li>
+		<li>Discrete Math 101</li>
+		<li>n-Choose-k problems</li>
+		<li>ilk</li>
+	</ol>
+	
 
-Graphs:
-	Can a problem be applied with a graph algorithm?
-	For example: 
-		1. Distance
-		2. Search
-		3. Connectivity
-		4. Cycle-detection
+<h2>Graphs</h2>
+<h3>Can a problem be applied with a graph algorithm?</h3>
+<h4>For example:</h4>
+	<ol>
+		<li>Distance</li>
+		<li>Search</li>
+		<li>Connectivity</li>
+		<li>Cycle-detection</li>
+	</ol>
 
-	Three basic ways to represent a graph in memory, what are they and their pros/cons? 
-		1. Objects and pointers
-		2. Matrix
-		3. Adjacency List
-		4. Adjacency Matrix 
-		<li><iframe width="300" height="160" src="https://www.youtube.com/embed/9C2cpQZVRBA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 
+<h2>Three basic ways to represent a graph in memory, what are they and their pros/cons?</h2>
+	<ol>
+  <li>
+  	<ol>
+		  <b>Objects and pointers</b>
+		  <li>Pros:</li>
+		  <li>Cons:</li>
+		</ol> 
+  </li>
+
+  <li>
+  	<ol>
+		  <b>Matrix</b>
+		  <li>Pros:</li>
+		  <li>Cons:</li>
+		</ol> 
+  </li>
+
+  <li>
+  	<ol>
+		  <b>Adjacency List</b>
+		  <li>Pros:</li>
+		  <li>Cons:</li>
+		</ol> 
+  </li>
+
+   <li>
+  	<ol>
+		  <b>Adjacency Matrix</b>
+		  <li>Pros:</li>
+		  <li>Cons:</li>
+		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/9C2cpQZVRBA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+		</ol> 
+  </li>
+
+</ol> 
+
+<h3>Computational Complexity</h3>
 	Know Computational complexity, their tradeoffs and how to implement them in real code. 
 		Basic graph traversal algorithms
 		Breadth-first search
