--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -119,7 +119,8 @@ What algorithms tend to work with each data structure?
 	</ol>
 
 
-<h2>Three basic ways to represent a graph in memory, what are they and their pros/cons?</h2>
+<h2>Represent Graph in Memory</h2>
+<h3>Three basic ways to represent a graph in memory, what are they and their pros/cons?</h3>
 	<ol>
   <li>
   	<ol>
