--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -100,7 +100,14 @@ What algorithms tend to work with each data structure?
 <h2>Mathematics</h2>
 	<ol>
 		<li>Basic discrete Math Questions</li>
-		<li>Counting Problems</li>
+		<li>Counting Problems
+				<li>To buy a computer system, a customer can choose one of 4 monitors, one of 2 keyboards, one of 4 computers and one of 3 printers. Determine the number of possible systems that a customer can choose from.</li>
+				<li>N = 4 × 2 × 4 × 3 = 96</li>
+				<li>In a certain country telephone numbers have 9 digits. The first two digits are the area code (03) and are the same within a given area. The last 7 digits are the local number and cannot begin with 0. How many different telephone numbers are possible within a given area code in this country?</li>
+				<li>N = 1 × 1 × 9 × 10 × 10 × 10 × 10 × 10 × 10 = 9,000,000</li>
+				<li>In a certain country, licence plate numbers have 3 letters followed by 4 digits. How many different licence plate numbers can be formed? (letters and digits may be repeated).</li>
+				<li>N = 26 × 26 × 26 × 10 × 10 × 10 × 10 = 175,760,000</li>
+		</li>
 		<li>Probability Problems</li>
 		<li>Discrete Math 101</li>
 		<li>n-Choose-k problems</li>
