--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -100,14 +100,13 @@ What algorithms tend to work with each data structure?
 <h2>Mathematics</h2>
 	<ol>
 		<li>Basic discrete Math Questions</li>
-		<li>Counting Problems
-				<li>To buy a computer system, a customer can choose one of 4 monitors, one of 2 keyboards, one of 4 computers and one of 3 printers. Determine the number of possible systems that a customer can choose from.</li>
-				<li>N = 4 × 2 × 4 × 3 = 96</li>
-				<li>In a certain country telephone numbers have 9 digits. The first two digits are the area code (03) and are the same within a given area. The last 7 digits are the local number and cannot begin with 0. How many different telephone numbers are possible within a given area code in this country?</li>
-				<li>N = 1 × 1 × 9 × 10 × 10 × 10 × 10 × 10 × 10 = 9,000,000</li>
-				<li>In a certain country, licence plate numbers have 3 letters followed by 4 digits. How many different licence plate numbers can be formed? (letters and digits may be repeated).</li>
-				<li>N = 26 × 26 × 26 × 10 × 10 × 10 × 10 = 175,760,000</li>
-		</li>
+		<ol>Counting Problems
+				<li>To buy a computer system, a customer can choose one of 4 monitors, one of 2 keyboards, one of 4 computers and one of 3 printers. Determine the number of possible systems that a customer can choose from. A customer can choose one monitor, one keyboard, one computer and one printer. Using the counting principle used in the introduction above, the number of all possible computer systems that can be bought is given by N = 4 × 2 × 4 × 3 = 96</li>
+				<li>In a certain country telephone numbers have 9 digits. The first two digits are the area code (03) and are the same within a given area. The last 7 digits are the local number and cannot begin with 0. How many different telephone numbers are possible within a given area code in this country? The first digit of the area code is 0, no choice which is in fact one choice only. The second digit of the area code is 1, no choice or one choice only. The first digit of the local code can be any digit except 0, so 9 choices. The 2nd, 3rd, 4th, 5th, 6th and 7 th digits of the local code can be any digit, hence 10 choices each. N = 1 × 1 × 9 × 10 × 10 × 10 × 10 × 10 × 10 = 9,000,000</li>
+				<li>In a certain country, licence plate numbers have 3 letters followed by 4 digits. How many different licence plate numbers can be formed? (letters and digits may be repeated).N = 26 × 26 × 26 × 10 × 10 × 10 × 10 = 175,760,000</li>
+				<li>Two dice are rolled. What is the total number of all possible outcomes? N = 6 × 6 = 36</li>
+				<li>A coin is tossed and a die is rolled. What is the total number of all possible outcomes? Two possible outcomes for the coin (heads,tails) and 6 possible outcomes (1,2,3,4,5,6) for the die. The total number of different outcomes is N = 2 × 6 = 12</li>
+		</ol>
 		<li>Probability Problems</li>
 		<li>Discrete Math 101</li>
 		<li>n-Choose-k problems</li>
