adding age variables

--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -8,6 +8,11 @@
 
   <script>
     // start with strings, numbers and booleans
+    let age = 100
+    let age2 = age;
+    console.log(age, age2);
+    age = 200;
+    console.log(age, age2);
 
     // Let's say we have an array
     const players = ['Katherine', 'Peter', 'Susan', 'Cotton'];
