--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -14,6 +14,12 @@
     age = 200;
     console.log(age, age2);
 
+    let name = 'katherine';
+    let name2 = name;
+    console.log(name, name2);
+    name = 'Katherine';
+    console.log(name, name2);
+
     // Let's say we have an array
     const players = ['Katherine', 'Peter', 'Susan', 'Cotton'];
 
