--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -25,6 +25,10 @@
 
     // and we want to make a copy of it.
 
+    const team = players; 
+
+    console.log(players, team);
+
     // You might think we can just do something like this:
 
     // however what happens when we update that array?
