--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -31,6 +31,8 @@
 
     // You might think we can just do something like this:
 
+    team[3] = 'lux';
+
     // however what happens when we update that array?
 
     // now here is the problem!
