--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -43,10 +43,13 @@
 
     // So, how do we fix this? We take a copy instead!
     const team2 = players.slice();
+    const team3 = [].concat(players);
 
     // one way
 
     // or create a new array and concat the old one in
+
+    const team = [...players];
 
     // or use the new ES6 Spread
 
