adding unique variable

--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -49,7 +49,7 @@
 
     // or create a new array and concat the old one in
 
-    const team = [...players];
+    const team4 = [...players];
 
     // or use the new ES6 Spread
 
