inserting into spread array

--- a/ObjectsArrays.html
+++ b/ObjectsArrays.html
@@ -50,6 +50,8 @@
     // or create a new array and concat the old one in
 
     const team4 = [...players];
+    team4[1] = 'Yo Yo Yo';
+    console.log(team4); 
 
     // or use the new ES6 Spread
 
