adding binary search

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -17,6 +17,7 @@
 		  <li>How can you improve/change it?</li>
 		  <li>Sorting</li>
 		  <li>Binary Search</li>
+		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/P3YID7liBug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Divide-and-conquer</li>
 		  <li>Greediness</li>
 		  <li>Recursion</li>
