adding divide and concergst

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -19,6 +19,7 @@
 		  <li>Binary Search</li>
 		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/P3YID7liBug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Divide-and-conquer</li>
+		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/6SUmp_Cn-SU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Greediness</li>
 		  <li>Recursion</li>
 		  <li>Algorithms linked to a specific data structure:</li>
