--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -21,7 +21,9 @@
 		  <li>Divide-and-conquer</li>
 		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/6SUmp_Cn-SU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Greediness</li>
+		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/HzeK7g8cD0Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Recursion</li>
+		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/KEEKn7Me-ms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		  <li>Algorithms linked to a specific data structure:</li>
 		  <li>Big-O notation/Run-Time</li>
 			<li><iframe width="300" height="160" src="https://www.youtube.com/embed/v4cd1O4zkGw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
