adding HTML Tags

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -133,6 +133,7 @@ What algorithms tend to work with each data structure?
 		<li>Distance</li>
 		<li>https://www.khanacademy.org/math/basic-geo/basic-geometry-pythagorean-theorem/pythagorean-theorem-distance/v/distance-formula</li>
 		<li>Search</li>
+		<li><iframe width="300" height="160" src="https://www.youtube.com/embed/3kz_KcFNq-U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 		<li>Connectivity</li>
 		<li>Cycle-detection</li>
 	</ol>
@@ -177,11 +178,13 @@ What algorithms tend to work with each data structure?
 </ol> 
 
 <h3>Computational Complexity</h3>
-	Know Computational complexity, their tradeoffs and how to implement them in real code. 
-		Basic graph traversal algorithms
-		Breadth-first search
-		depth-first search
-
+	<h4>Know Computational complexity, their tradeoffs and how to implement them in real code.</h4>
+		<ul>
+		<li>Basic graph traversal algorithms</li>
+		<li>Breadth-first search</li>
+		<li>depth-first search</li>
+		</ul>
+		
 Recursion:
 	Thinking Recursively
 	Coding in a recursive solution
