adding html tags

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -184,11 +184,15 @@ What algorithms tend to work with each data structure?
 		<li>Breadth-first search</li>
 		<li>depth-first search</li>
 		</ul>
-		
-Recursion:
-	Thinking Recursively
-	Coding in a recursive solution
+
+<h3>Recursion</h3>
+	<ul>
+	<li>Thinking Recursively</li>
+	<li>Coding in a recursive solution</li>
 	How can you use recursion to find a more elegant solution to problems that can be solved iteratively? 
+	</ul>
+
+
 
 Web Front End:
 	Front End Latency
