adding more html tags" adding more html tags" "
git push
"

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -194,12 +194,12 @@ What algorithms tend to work with each data structure?
 
 
 
-Web Front End:
+<h3>Web Front End</h3>
 	Front End Latency
 	Implementation of Standard CS Algorithms Useing idomatic JavaScript
 	Idomatic JavaScript:
 
-Articulate JavaScript Strengths and Shortcomings
+<h3>Articulate JavaScript Strengths and Shortcomings</h3>
 		Pros of JavaScript:
 		1. It's a front and back end lanugage. 
 		2. It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events. 
@@ -212,7 +212,7 @@ Articulate JavaScript Strengths and Shortcomings
 		2. Since it's a client-side language, it can be used for malice intent. 
 		3. JavaScript can be interpreted differently within different browsers. 
 
-	Be ready to talk about anything listed below: 
+<h3>Be ready to talk about anything listed below</h3>
 			1. Web Security issues 
 					XSS
 					XSRF
@@ -223,7 +223,7 @@ Articulate JavaScript Strengths and Shortcomings
 			6. XHR Request & HTTP Headers
 			7. JavaScript Closures
 
-Front End/Mobile Design:
+<h3>Front End/Mobile Design</h3>
 	Web App:
 	Mobile App:
 	API Design (Where front end and back end meet):
