adding more tags

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -213,15 +213,17 @@ What algorithms tend to work with each data structure?
 		3. JavaScript can be interpreted differently within different browsers. 
 
 <h3>Be ready to talk about anything listed below</h3>
-			1. Web Security issues 
+	<ol>
+			<li>Web Security issues</li>
 					XSS
 					XSRF
-			2. Prototypal Inheritance
-			3. DOM API & Manipulation
-			4. CSS Manipulation
-			5. Browser/DOM events and event handling
-			6. XHR Request & HTTP Headers
-			7. JavaScript Closures
+			<li>Prototypal Inheritance</li>
+			<li>DOM API & Manipulation</li>
+			<li>CSS Manipulation</li>
+			<li>Browser/DOM events and event handling</li>
+			<li>XHR Request & HTTP Headers</li>
+			<li>JavaScript Closures</li>
+	</ol>
 
 <h3>Front End/Mobile Design</h3>
 	Web App:
