adding more tags

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -192,25 +192,23 @@ What algorithms tend to work with each data structure?
 	How can you use recursion to find a more elegant solution to problems that can be solved iteratively? 
 	</ul>
 
-
-
 <h3>Web Front End</h3>
 	Front End Latency
 	Implementation of Standard CS Algorithms Useing idomatic JavaScript
 	Idomatic JavaScript:
 
 <h3>Articulate JavaScript Strengths and Shortcomings</h3>
-		Pros of JavaScript:
-		1. It's a front and back end lanugage. 
-		2. It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events. 
-		3. Event Handlers/Trigger events, click, mouse over, key down... 
-		4. Can completed math functions/turing complete language. 
-		5. It can accept and manipulate data within the DOM of a brower to be used for an additional purpose. 
+		<ol>Pros of JavaScript</ol>
+		<li>It's a front and back end lanugage.</li>
+		<li>It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events.</li>
+		<li>Event Handlers/Trigger events, click, mouse over, key down...</li> 
+		<li>Can completed math functions/turing complete language.</li>
+		<li>It can accept and manipulate data within the DOM of a brower to be used for an additional purpose.</li>
 
 		Cons of JavaScript:
-		1. User has the ability to turn it off/Functionality in control of user 
-		2. Since it's a client-side language, it can be used for malice intent. 
-		3. JavaScript can be interpreted differently within different browsers. 
+		<li>User has the ability to turn it off/Functionality in control of user</li>
+		<li>Since it's a client-side language, it can be used for malice intent.</li>
+		<li>JavaScript can be interpreted differently within different browsers.</li>
 
 <h3>Be ready to talk about anything listed below</h3>
 	<ol>
@@ -226,9 +224,9 @@ What algorithms tend to work with each data structure?
 	</ol>
 
 <h3>Front End/Mobile Design</h3>
-	Web App:
-	Mobile App:
-	API Design (Where front end and back end meet):
+	<li>Web App</li>
+	<li>Mobile App</li>
+	<li>API Design (Where front end and back end meet)</li>
 
 </body>
 </html>
