adding sorts for js

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -16,6 +16,8 @@
 		  <li>Top-down approach</li>
 		  <li>How can you improve/change it?</li>
 		  <li>Sorting</li>
+		  <li>https://www.geeksforgeeks.org/javascript-array-sort/</li>
+		  <li>https://www.w3schools.com/js/tryit.asp?filename=tryjs_array_sort2</li>
 		  <li>https://khan4019.github.io/front-end-Interview-Questions/sort.html</li>
 		  <li>Binary Search</li>
 		  <li><iframe width="300" height="160" src="https://www.youtube.com/embed/P3YID7liBug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
@@ -198,12 +200,13 @@ What algorithms tend to work with each data structure?
 	Idomatic JavaScript:
 
 <h3>Articulate JavaScript Strengths and Shortcomings</h3>
-		<ol>Pros of JavaScript</ol>
-		<li>It's a front and back end lanugage.</li>
-		<li>It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events.</li>
-		<li>Event Handlers/Trigger events, click, mouse over, key down...</li> 
-		<li>Can completed math functions/turing complete language.</li>
-		<li>It can accept and manipulate data within the DOM of a brower to be used for an additional purpose.</li>
+		<ol>Pros of JavaScript
+			<li>It's a front and back end lanugage.</li>
+			<li>It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events.</li>
+			<li>Event Handlers/Trigger events, click, mouse over, key down...</li> 
+			<li>Can completed math functions/turing complete language.</li>
+			<li>It can accept and manipulate data within the DOM of a brower to be used for an additional purpose.</li>
+		</ol>
 
 		Cons of JavaScript:
 		<li>User has the ability to turn it off/Functionality in control of user</li>
@@ -224,9 +227,11 @@ What algorithms tend to work with each data structure?
 	</ol>
 
 <h3>Front End/Mobile Design</h3>
-	<li>Web App</li>
-	<li>Mobile App</li>
-	<li>API Design (Where front end and back end meet)</li>
+	<ol>
+		<li>Web App</li>
+		<li>Mobile App</li>
+		<li>API Design (Where front end and back end meet)</li>
+	</ol>
 
 </body>
 </html>
