adding html, css and js questions

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -237,5 +237,12 @@ What algorithms tend to work with each data structure?
 		<li>API Design (Where front end and back end meet)</li>
 	</ol>
 
+<h3>HTML, CSS AND JS QUESTIONS</h3>
+	<ol>
+		<li>https://khan4019.github.io/front-end-Interview-Questions/html.html</li>
+		<li>https://khan4019.github.io/front-end-Interview-Questions/css.html</li>
+		<li>https://khan4019.github.io/front-end-Interview-Questions/js1.html</li>
+	</ol>
+
 </body>
 </html>
