--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -201,7 +201,7 @@ What algorithms tend to work with each data structure?
 	Idomatic JavaScript:
 
 <h3>Articulate JavaScript Strengths and Shortcomings</h3>
-		<ol>Pros of JavaScript
+		<ol><b>Pros of JavaScript</b>
 			<li>It's a front and back end lanugage.</li>
 			<li>It's everywhere. Websites, PDFs, software (Adobe), build scripts/trigger events.</li>
 			<li>Event Handlers/Trigger events, click, mouse over, key down...</li> 
@@ -209,10 +209,11 @@ What algorithms tend to work with each data structure?
 			<li>It can accept and manipulate data within the DOM of a brower to be used for an additional purpose.</li>
 		</ol>
 
-		Cons of JavaScript:
-		<li>User has the ability to turn it off/Functionality in control of user</li>
-		<li>Since it's a client-side language, it can be used for malice intent.</li>
-		<li>JavaScript can be interpreted differently within different browsers.</li>
+		<ol><b>Cons of JavaScript:</b>
+			<li>User has the ability to turn it off/Functionality in control of user</li>
+			<li>Since it's a client-side language, it can be used for malice intent.</li>
+			<li>JavaScript can be interpreted differently within different browsers.</li>
+		</ol>
 
 <h3>Be ready to talk about anything listed below</h3>
 	<ol>
