adding info on recursion

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -190,15 +190,18 @@ What algorithms tend to work with each data structure?
 
 <h3>Recursion</h3>
 	<ul>
+		<li>https://codeburst.io/learn-and-understand-recursion-in-javascript-b588218e87ea</li>
 	<li>Thinking Recursively</li>
 	<li>Coding in a recursive solution</li>
 	How can you use recursion to find a more elegant solution to problems that can be solved iteratively? 
 	</ul>
 
 <h3>Web Front End</h3>
-	Front End Latency
-	Implementation of Standard CS Algorithms Useing idomatic JavaScript
-	Idomatic JavaScript:
+	<ul>
+		<li>Front End Latency</li>
+		<li>Implementation of Standard CS Algorithms Useing idomatic JavaScript</li>
+		<li>Idomatic JavaScript</li>
+	</ul>
 
 <h3>Articulate JavaScript Strengths and Shortcomings</h3>
 		<ol><b>Pros of JavaScript</b>
