--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -252,12 +252,14 @@ What algorithms tend to work with each data structure?
 	</ol>
 
 	<h3>Reverse String</h3>
-	<script type="text/javascript">
-		function reverseString(str) {
-		    return str.split("").reverse().join("");
-		}
-		console.log(reverseString("hello"));
-	</script>
+		<script type="text/javascript">
+			function reverseString(str) {
+			    return str.split("").reverse().join("");
+			}
+			console.log(reverseString("hello"));
+
+			console.log(Math.pow(4, 3));
+		</script>
 
 </body>
 </html>
