--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -251,7 +251,7 @@ What algorithms tend to work with each data structure?
 		<li>https://khan4019.github.io/front-end-Interview-Questions/js1.html</li>
 	</ol>
 
-	<h3>Reverse String</h3>
+	<h3>Reverse String and Math Scripts</h3>
 		<script type="text/javascript">
 			function reverseString(str) {
 			    return str.split("").reverse().join("");
@@ -259,6 +259,9 @@ What algorithms tend to work with each data structure?
 			console.log(reverseString("hello"));
 
 			console.log(Math.pow(2, 64));
+			console.log(Math.pow(7, -2));
+			console.log(Math.random(7));
+			console.log(Math.random(6));
 		</script>
 
 </body>
