adding math rounding

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -262,6 +262,9 @@ What algorithms tend to work with each data structure?
 			console.log(Math.pow(7, -2));
 			console.log(Math.random(7));
 			console.log(Math.random(6));
+			console.log(Math.round(0.4382));
+			console.log(Math.round(2432.54839));
+			
 		</script>
 
 </body>
