--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -264,6 +264,8 @@ What algorithms tend to work with each data structure?
 			console.log(Math.random(6));
 			console.log(Math.round(0.4382));
 			console.log(Math.round(2432.54839));
+			console.log(Math.max(1, 3, 2, 5, 3, 2));
+			console.log(Math.floor(5.95));
 			
 		</script>
 
