adding more math calls of dot notation

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -267,6 +267,7 @@ What algorithms tend to work with each data structure?
 			console.log(Math.max(1, 3, 2, 5, 3, 2));
 			console.log(Math.floor(5.95));
 			console.log(Math.min(-2, -3, -1));
+			console.log(Math.log10(100000));
 		</script>
 
 </body>
