adding more functions

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -4,15 +4,12 @@
 	<title></title>
 </head>
 <body>
-
-	<script type="text/javascript">
-			
+	<script type="text/javascript">	
 		function getPerimeter(length, width) {
-		    // const perimeter;
+		    const perimeter;
 		    perimeter = 2 * (length + width);
 				}
 		console.log(getPerimeter(10, 10));
 	</script> 
-
 </body>
 </html>
