working on n choose k code

--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -61,6 +61,17 @@
 
 		console.log(factorial2(7));
 
+		function binomial(n, k) {
+     if ((typeof n !== 'number') || (typeof k !== 'number')) 
+		  return false; 
+		    var coeff = 1;
+		    for (var x = n-k+1; x <= n; x++) coeff *= x;
+		    for (x = 1; x <= k; x++) coeff /= x;
+		    return coeff;
+		}
+
+		console.log(binomial(8,3));
+		console.log(binomial(10,2));
 
 	</script> 
 </body>
