--- a/define.html
+++ b/define.html
@@ -10,6 +10,9 @@
 <h2>Polynomial = In mathematics, a polynomial is an expression consisting of variables and coefficients, that involves only the operations of addition, subtraction, multiplication, and non-negative integer exponents of variables</h2>
 <h2>Coefficient = In mathematics, a coefficient is a multiplicative factor in some term of a polynomial, a series, or any expression; it is usually a number, but may be any expression. In the latter case, the variables appearing in the coefficients are often called parameters, and must be clearly distinguished from the other variables.</h2>
 <h2>Expression = An algebraic expression is a mathematical phrase that can contain ordinary numbers, variables (like x or y) and operators (like add,subtract,multiply, and divide). Here are some algebraic expressions: a + 1. a - b. 3x.</h2>
+<h2>Permutation = the action of changing the arrangement, especially the linear order, of a set of items.</h2>
+<h2>Factoral = the product of an integer and all the integers below it; e.g. factorial four ( 4! ) is equal to 24.</h2>
+
 
 </body>
 </html>
