--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -92,17 +92,18 @@
 	    // Print the perimeter of the circle:
 	    console.log(perimeter(rad));
 	  }
+	  console.log(mainCircle(2))
 
-	  function main() {
+	  function mainCircle2() {
+    const PI = Math.PI;
     // Write your code here. Read input using 'readLine()' and print output using 'console.log()'.
-    var input = readLine();
-    
+    var r = readLine();
     // Print the area of the circle:
-    console.log(input*input*Math.PI);
-    
+    console.log(PI * r * r);
     // Print the perimeter of the circle:
-    console.log(input*2*Math.PI);
+    console.log(2 * PI * r);
   }
+
 	</script> 
 </body>
 </html>
