--- a/AStudyGuideJavaScript.html
+++ b/AStudyGuideJavaScript.html
@@ -68,6 +68,45 @@
 		console.log(binomial(8,3));
 		console.log(binomial(10,2));
 
+		//weighted mean
+		function processData(input) {
+  // Grab and convert the data
+  var data = input.split("\n")[1].split(" ");
+  data = data.map(function(x){
+    return parseInt(x);
+  })
+  
+  var weights = input.split("\n")[2].split(" ");
+  weights = weights.map(function(x){
+    return parseInt(x);
+  })
+  
+  // Weighted mean
+  
+  function weightedMean(data, weights) {
+    var sum = 0;
+    for (i = 0; i < data.length; i++) {
+      sum += data[i] * weights[i];
+    }
+    return (sum / weights.reduce(function(x, y) {
+      return x + y;
+    }, 0)).toFixed(1);
+  } 
+  console.log(weightedMean(data, weights));
+}
+
+
+process.stdin.resume();
+process.stdin.setEncoding("ascii");
+_input = "";
+process.stdin.on("data", function (input) {
+    _input += input;
+});
+
+process.stdin.on("end", function () {
+   processData(_input);
+});
+
 
 	</script> 
 </body>
