adding strings includes and concat

--- a/AStudyGuide.html
+++ b/AStudyGuide.html
@@ -9,6 +9,9 @@
 	<h1>Coding</h1>
 	<h3>JavaScript. Focus on conceptual understanding.</h3>
 
+	<h2>ahrefs</h2>
+	<h3>https://ahrefs.com/</h3>
+
 	<h1>Algorithms</h1>
 	<h2>http://blog.benoitvallon.com/sorting-algorithms-in-javascript/the-merge-sort-algorithm/</h2>
 		<ul style="list-style-type:circle;">
@@ -131,7 +134,7 @@ What algorithms tend to work with each data structure?
 						}
 
 						console.log(permute([1, 2, 3]));
-						
+
 				</script>
 
 				<li>Combinations (number of ways to select without an order): If you are asked to count the number of ways that k out of n objects can be selected without an order, the number of ways is “n combination k,” abbreviated nCk. • You can find nCk by setting up a fraction in the following way: on the top, multiply k whole numbers counting downward from n; on the bottom, multiply k whole numbers counting upward from 1.</li>
